Implement Epic 10 comments
