# app/models/photo.rb
@@ -7,6 +7,7 @@ class Photo < ApplicationRecord
   belongs_to :wedding
   belongs_to :studio_storage_connection, optional: true
   belongs_to :upload_batch, optional: true
+  has_many :comments, dependent: :destroy
   has_many :likes, dependent: :destroy
   has_many :shortlist_photos, dependent: :destroy
 
